# nfind

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: index.html
cli/: index.html
comparison/: index.html
configuration/: index.html
dependencies/: index.html
docs/: api.md  cli.md  comparison.md  configuration.md  cookbook.md  dependencies.md  examples.md  getting-started.md  index.md  installation.md  limits.md  macos-metadata.md  output-modes.md  runtimes.md  safety.md  troubleshooting.md
examples/: index.html
getting-started/: index.html
installation/: index.html
limits/: index.html
macos-metadata/: index.html
output-modes/: index.html
runtimes/: index.html
safety/: index.html
search/: search_index.json
src/nfind/: Dockerfile.node  Dockerfile.python  __init__.py  _filter_harness.py  backend.py  cli.py  command_plan.py  config.py  constants.py  deadline.py  endpoint_cache.py  enumeration.py  errors.py  execution.py  extract.py  filter_harness.py  generation.py  paths.py  runtimes.py  sandbox.py  serialization.py  whitelist.py  worker.py  worker_node.cjs
src/nfind/sandbox/: __init__.py  apple.py  base.py  docker.py  nerdctl.py  podman.py
src/pfind/: Dockerfile.node  Dockerfile.python  __init__.py  _constants.py  backend.py  cli.py  config.py  constants.py  endpoint_cache.py  errors.py  metadata.py  paths.py  runtimes.py  sandbox.py  saved.py  serialization.py  whitelist.py  worker.py  worker_node.cjs
tests/: conftest.py  fakes.py  test_backend.py  test_cli.py  test_cli_integration.py  test_command_plan.py  test_config.py  test_deadline.py  test_endpoint_cache.py  test_enumeration.py  test_extract.py  test_integration.py  test_sandbox.py  test_worker_node.py
tests/semantic/: README.md  __init__.py  cases.py  evaluate.py  test_cases.py  test_evaluate.py
tests/semantic/assets/: README.md
troubleshooting/: index.html
