[project]
name = "nfind"
version = "0.1.0"
description = "Find files by describing them in natural language, with the generated filter sandboxed in Docker."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dinu Gherman", email = "gherman@darwin.in-berlin.de" }]
keywords = ["find", "search", "files", "llm", "natural-language", "docker", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: JavaScript",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1",
    "pygments>=2",
    "ruff>=0.4",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://deeplook.github.io/nfind/"
Documentation = "https://deeplook.github.io/nfind/"
Repository = "https://github.com/deeplook/nfind"
Issues = "https://github.com/deeplook/nfind/issues"

[project.scripts]
nfind = "nfind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nfind"]
artifacts = [
    "src/nfind/Dockerfile.python",
    "src/nfind/Dockerfile.node",
    "src/nfind/worker_node.cjs",
]

[tool.hatch.build.targets.sdist]
include = ["src/nfind", "README.md"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# B008: typer.Argument/Option in default args is the intended typer pattern.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pygments.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests that build and run a real Docker container (skipped when Docker is unavailable; deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
# Protocol method bodies are pure stubs (`...`) and are never executed.
exclude_also = ["^\\s*\\.\\.\\.$"]
