[project]
name = "nfind"
version = "0.1.0"
description = "Find files by describing them in natural language, with the generated filter sandboxed in Docker."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dinu Gherman", email = "gherman@darwin.in-berlin.de" }]
keywords = ["find", "search", "files", "llm", "natural-language", "docker", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: JavaScript",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1",
    "pygments>=2",
    "ruff>=0.4",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://deeplook.github.io/nfind/"
Documentation = "https://deeplook.github.io/nfind/"
Repository = "https://github.com/deeplook/nfind"
Issues = "https://github.com/deeplook/nfind/issues"

[project.scripts]
nfind = "nfind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nfind"]
artifacts = [
    "src/nfind/Dockerfile.python",
    "src/nfind/Dockerfile.node",
    "src/nfind/worker_node.cjs",
    "src/nfind/py.typed",
]

[tool.hatch.build.targets.sdist]
include = ["src/nfind", "README.md"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# B008: typer.Argument/Option in default args is the intended typer pattern.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pygments.*"]
ignore_missing_imports = true

# Tests are type-checked for real bugs (``check_untyped_defs`` stays on), but we
# don't force ``-> None`` on every test function, and we let them import internals
# freely (``implicit_reexport``) -- the annotation/re-export ceremony would be pure
# noise for little signal. mypy only treats a whole path component ``*`` as a
# wildcard, so the test modules are listed explicitly rather than as ``test_*``.
[[tool.mypy.overrides]]
module = [
    "conftest",
    "fakes",
    "test_backend",
    "test_cli_integration",
    "test_command_plan",
    "test_config",
    "test_endpoint_cache",
    "test_enumeration",
    "test_extract",
    "test_integration",
    "test_sandbox",
    "test_worker_node",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
implicit_reexport = true
warn_return_any = false
# attr-defined: tests legitimately patch names on the module that uses them
# (e.g. ``sandbox.subprocess``), which strict's no_implicit_reexport flags as noise;
# a real attribute typo fails when the test runs anyway. var-annotated: empty
# collections / un-parametrised ``CompletedProcess`` need annotations that add no
# signal. Kept on: arg-type, call-arg, return-value, etc. -- the real bug catchers.
disable_error_code = ["attr-defined", "var-annotated"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests that build and run real sandbox containers (skipped when the selected runtime is unavailable; deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
# Protocol method bodies are pure stubs (`...`) and are never executed.
exclude_also = ["^\\s*\\.\\.\\.$"]
